welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:2: error: not found: type int
  var T:int
        ^noTriples:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var T:int
      ^noTriples:2: error: local variables must be initialized
  var T:int
      ^